dirmanager -l testing completed

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Dependency directories
 node_modules/
 jspm_packages/
+coverage/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
